change deprecated LockedChannel references to VolatileReadData, fix IDE warnings