@@ -62,8 +62,8 @@ import org.janelia.render.client.parameter.TileRenderParameters;
 import org.janelia.saalfeldlab.googlecloud.GoogleCloudStorageURI;
 import org.janelia.saalfeldlab.googlecloud.GoogleCloudUtils;
 import org.janelia.saalfeldlab.n5.KeyValueAccess;
-import org.janelia.saalfeldlab.n5.LockedChannel;
 import org.janelia.saalfeldlab.n5.googlecloud.GoogleCloudStorageKeyValueAccess;
+import org.janelia.saalfeldlab.n5.readdata.ReadData;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -189,7 +189,7 @@ public class RenderTilesClient {
                                 "The filterListPath file " + filterFile.getAbsolutePath() + " contains " +
                                 filterListNames.size() + " lists but must contain one and only one list");
                     }
-                    filterSpecList = factory.getFilterList(filterListNames.get(0));
+                    filterSpecList = factory.getFilterList(filterListNames.getFirst());
                 } catch(final IOException ioe) {
                     throw new IllegalArgumentException("Failed to read filterListPath " + filterFile.getAbsolutePath(),
                                                        ioe);
@@ -352,7 +352,7 @@ public class RenderTilesClient {
                                      renderParametersQueryString;
 
         RenderParameters renderParameters = RenderParameters.loadFromUrl(parametersUrl);
-        final TileSpec tileSpec = renderParameters.getTileSpecs().get(0);
+        final TileSpec tileSpec = renderParameters.getTileSpecs().getFirst();
 
         if (tileRender.renderTileImagesLocally) {
             final String imageUrl = tileSpec.getFirstMipmapEntry().getValue().getImageUrl();
@@ -363,7 +363,7 @@ public class RenderTilesClient {
         }
 
         if (filterSpecList != null) {
-            tileSpec.setFilterSpec(filterSpecList.get(0));
+            tileSpec.setFilterSpec(filterSpecList.getFirst());
             for (int i = 1; i < filterSpecList.size(); i++) {
                 tileSpec.addFilterSpec(filterSpecList.get(i));
             }
@@ -460,7 +460,7 @@ public class RenderTilesClient {
                 throw new IllegalArgumentException("hack stack tiles should have only one channel but tile " +
                                                    tileId + " has " + allChannels.size() + " channels");
             }
-            final ChannelSpec channelSpec = allChannels.get(0);
+            final ChannelSpec channelSpec = allChannels.getFirst();
 
             // Use the URI string directly instead of the file path
             ImageAndMask renderedImageAndMask = channelSpec
@@ -671,12 +671,11 @@ public class RenderTilesClient {
             //       GoogleCloudStorageKeyValueAccess derives bucket keys with
             //       GoogleCloudUtils.getGoogleCloudStorageKey, which treats the first element of a
             //       scheme-less path as a bucket name and drops it.
-            try (final LockedChannel lockedChannel = keyValueAccess.lockForWriting(uri.toString())) {
-                final ByteArrayOutputStream oStream = new ByteArrayOutputStream();
-                ImageIO.write(image, format, oStream);
-                lockedChannel.newOutputStream().write(oStream.toByteArray());
-                LOG.info("image written to {}", uri);
-            }
+            final ByteArrayOutputStream oStream = new ByteArrayOutputStream();
+            ImageIO.write(image, format, oStream);
+            keyValueAccess.write(uri.toString(), ReadData.from(oStream.toByteArray()));
+
+            LOG.info("image written to {}", uri);
 
             // This yields the public URL for the image
             return "https://storage.googleapis.com" + uri.toString().substring(4);
